welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:17: error: not found: value y
		setPos(x,y)
                         ^